histoire, dons, img

--- a/aide.html
+++ b/aide.html
@@ -89,10 +89,10 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/origines2.png" width="220" height="650" />
                             </li>
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/musee-ethno2.png" width="220" height="650"  />
                             </li>
                         </ul>
                     </div>
