--- a/histoire.html
+++ b/histoire.html
@@ -65,7 +65,7 @@
                             <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Dons</a></li>
+                    <li><a href="dons.html">Dons</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -80,25 +80,6 @@
             <div class="row">
 
 
-  <div class="col-sm-6 col-sm-offset-3 ">
-                    <div class="flexslider" "alig">
-                      <center>
-                        <ul class="slides">
-                            <li>
-                              <img src="img/about_slide1.jpg" />
-                            </li>
-                            <li>
-                              <img src="img/about_slide1.jpg" />
-                            </li>
-                        </ul>
-                        </center>
-                    </div>
-                </div>
-                </div>
-
-                </br>
-                </br>
-
 
                  <div class="col-sm-12 intro">
                     <p>
@@ -110,7 +91,55 @@
                       </br>
                         C'est Charles de Noailles qui succède à Paul Doumer en 1928 . Grand mécène, collectionneur d'art contemporain , ami des surréalistes , il assure le financement du film de Jean Cocteau , "le sang d'un poète ", et de celui de Luis Bunuel , " l'âge d'or " et commande à l'architecte Robert Mallet-Stevens la villa de Hyères qui porte son nom . Ami de Georges-Henri Rivière , il donne une forte impulsion à la société des amis , réunit de grands mécènes , collecte des dons , enrichit les collections du Musée et finance la mission Dakar-Djibouti de 1937 . Pendant cette  période de l'entre deux guerres , la société des amis va devenir le soutien économique indispensable d'un musée qui manque de moyens de fonctionnement . Elle  achète du mobilier , des livres , finance des dépenses de personnel ou encore des travaux d'aménagement comme ceux de la bibliothèque du Musée.
                       </br>
-                      </br>
+<div id="service_1">
+        <div class="container">
+            <div class="section_header">
+            </div>
+            <div class="row service_wrapper">
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/allez2.jpg">
+                                <img src="img/allez2.jpg" width="290" height="390">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature">
+                        <div class="img_box">
+                            <a href="img/laura2.jpg">
+                                <img src="img/laura2.jpg" width="290" height="390">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="feature last">
+                        <div class="img_box">
+                            <a href="img/musee-ethno2.png">
+                                <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px">
+                                <span class="circle">
+                                    <span class="plus">&#43;</span>
+                                </span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </br>
+    </br>
 
                         La seconde guerre mondiale met les activités de la société des amis en
  sommeil . Elle reprendra vie en 1956 grâce au directeur du Musée , le professeur Henri Vallois qui
