--- a/dons.html
+++ b/dons.html
@@ -94,8 +94,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/italie.png">
-                                <img src="img/italie.png" width="290" height="190">
+                            <a href="img/allez2.jpg">
+                                <img src="img/allez2.jpg" width="290" height="390">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -107,8 +107,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/bouddah.png">
-                                <img src="img/bouddah.png" width="290" height="190">
+                            <a href="img/laura2.jpg">
+                                <img src="img/laura2.jpg" width="290" height="390">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -120,8 +120,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/afrique.png">
-                                <img src="img/afrique.png" width="290" height="190" topmargin="10px">
+                            <a href="img/musee-ethno2.png">
+                                <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -133,6 +133,7 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
             </div>
         </div>
     </div>
+    </br>
     </br>
 
                 <center><h2>Dons </h></center>
