--- a/aide.html
+++ b/aide.html
@@ -76,7 +76,7 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>1. Aide aux chercheurs</h3>
+                <h3>1. Missions : Aide aux chercheurs</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
