--- a/collections.html
+++ b/collections.html
@@ -82,7 +82,7 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>2. Enrichissements des collections</h3>
+                <h3>2. Missions : Enrichissements des collections</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
