--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
 
             For the backgrounds, you can combine from the bgs folder :D
         -->
-        <article class="slide" id="showcasing" style="background: url('img/backgrounds/Slider_1_bis.jpg') repeat-x top center;">
-            <div class="info">""
-                <h2></h2
-            </div>
-        </article>
+
         <article class="slide" id="ideas" style="background: url('img/backgrounds/slider_2_bis.jpg') repeat-x top center;">
             <div class="info">
             </div>
@@ -68,7 +64,7 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand"><strong>Socièté des Amis de l'Homme</strong></a>
+                <a href="index.html" class="navbar-brand"><strong>Société des Amis du Musée de l'Homme</strong></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse" role="navigation">
@@ -114,7 +110,7 @@
     <div id="showcase" text-align: center;>
         <div class="container">
             <div class="section_header">
-                <center><h3>La Société des Amis du Musée de l'Homme</h3></center>
+                <center><h3>Société des Amis du Musée de l'Homme</h3></center>
             </div>
             <div class= "row feature_wrapper">
                         </div>
@@ -195,8 +191,8 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
                     <div class="row social">
                         <div class="col-md-12">
                             <a href="http://www.museedelhomme.fr/">Site du Musée de l'Homme</a>
-                            <a href="http://www.mnhn.fr/fr">Muséum national d'Histoire Naturelle</a>
-                            <a href="">Autre site partenaire </a>
+                            <a href="http://www.mnhn.fr/fr">Muséum National d'Histoire Naturelle</a>
+                            <a href="http://www.amis-musees.fr/">Les Amis de Musées </a>
 
 
                         </div>
