--- a/soutien.html
+++ b/soutien.html
@@ -75,7 +75,7 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>3. Soutien aux activités</h3>
+                <h3>3. Missions : Soutien aux activités</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
