commit various little changes

--- a/avantages.html
+++ b/avantages.html
@@ -53,7 +53,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Socièté des Amis</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
+                            <li><a href="marseille.html">Méditerranée</a></li>
                             <li><a href="nantes.html">Océanique</a></li>
                         </ul>
                     </li>
@@ -103,7 +103,7 @@
 
                 <div class="col-sm-6 block">
                     <div class="box">
-                        <p class="title">Si je suis adhérent à Marseille , est-ce que je peux participer à une visite organisée ? </p>
+                        <p class="title">Si je suis adhérent à Marseille, ou à Nantes, est-ce que je peux participer à une visite organisée à Paris ? </p>
                         <p class="answ">
                             There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
                     </div>
