--- a/nantes.html
+++ b/nantes.html
@@ -54,7 +54,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Socièté des Amis</a></li>
-                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
@@ -125,7 +125,7 @@
     <div id="service_2">
         <div class="container">
             <div class="section_header">
-                <h3>Nantes </h3>
+                <h3>Antenne Océanique </h3>
             </div>
             <div class="row perk">
                 <div class="col-sm-2 circle circle1">
