--- a/organisation.html
+++ b/organisation.html
@@ -54,7 +54,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Socièté des Amis</a></li>
-                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
@@ -115,7 +115,7 @@
                 <h3> 2 Antennes </h3>
             </div>
             <p>
-                            L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanie</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. Le siège de la socièté des amis se trouve au <B> 17 place du Trocadero 75116 PARIS. </B></p>
+                            L'association compte 2 antennes, l'antenne <b>Méditerranée</b> à Marseille et l'antenne <b>Océanique</b> à Nantes.<b> Cliquez-ci dessous</b> pour obtenir plus d'informations. Le siège de la socièté des amis se trouve au <B> 17 place du Trocadero 75116 PARIS. </B></p>
 
                             </br>
                             </br>
@@ -123,7 +123,7 @@
             <div class="row services_circles">
                 <div class="col-sm-5 description">
                         <div class="text active">
-                      <h4>Siège des amis</h4>
+                      <h4>Siège de la socièté</h4>
                         <p>
                             17 Place du Trocadero 75116, Paris. Tel : 01 47 04 62 10. Courriel : samh@mnhn.fr  </p>
 
@@ -134,7 +134,7 @@
                             (Marseille) Présidée par Alix Martin, Secrétaire général : Anne-Marie SUIDE. Adresse : 48 boulevard Hugues 13012 MARSEILLE Tél. 04 91 342 512 Courriel : samh.med13@orange.fr </p>
                     </div>
                     <div class="text">
-                        <h4>Océanie</h4>
+                        <h4>Océanique</h4>
                         <p>
                             (Nantes) Présidée par Hervé Lerat, Secrétaire général : Patrice Morette-Bourny. Adresse : 30 rue de la Bernerie 44210 PORNIC Tél. 06 58 58 99 95 Courriel : info@samh-oceanique.info </p>
                     </div>
