--- a/tarifs.html
+++ b/tarifs.html
@@ -53,7 +53,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Socièté des Amis</a></li>
-                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
@@ -75,7 +75,7 @@
     <div id="in_pricing">
         <div class="container">
             <div class="head">
-                <h3>Tarifs </h3>
+                <h3>Adhérer </h3>
                 <h6>Rejoignez la Société des Amis du Musée de l'Homme</h6>
             </div>
 
@@ -241,7 +241,7 @@
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="pricing.html">Bulletin </a>
+                <a href="pricing.html">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
