--- a/histoire.html
+++ b/histoire.html
@@ -54,7 +54,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Socièté des Amis</a></li>
-                            <li><a href="marseille.html">Antenne Méditérranée</a></li>
+                            <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
                     </li>
@@ -99,7 +99,7 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/allez2.jpg">
+                            <a href="img/musee-ethno2.png ">
                                 <img src="img/allez2.jpg" width="290" height="390">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
@@ -125,7 +125,7 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/musee-ethno2.png">
+                            <a href="img/allez2.jpg">
                                 <img src="img/musee-ethno2.png" width="290" height="390" topmargin="10px">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
