--- a/soutien.html
+++ b/soutien.html
@@ -54,7 +54,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="paris.html">Paris</a></li>
-                            <li><a href="marseille.html">Méditérranée</a></li>
+                            <li><a href="marseille.html">Méditerranée</a></li>
                             <li><a href="nantes.html">Océanique</a></li>
                         </ul>
                     </li>
