push images rubriques

--- a/collections.html
+++ b/collections.html
@@ -95,10 +95,10 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/laura2.jpg" />
                             </li>
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/laura2.jpg" />
                             </li>
                         </ul>
                     </div>
