--- a/tarifs.html
+++ b/tarifs.html
@@ -198,7 +198,7 @@
 <div id="faq">
         <div class="container">
             <div class="section_header">
-                <h3>Avantages de nos membres</h3>
+                <h3>Les avantages de nos membres</h3>
             </div>
 
             <div class="row">
@@ -224,7 +224,7 @@
                     <div class="box">
                         <p class="title">Entrée gratuite</p>
                         <p class="answ">
-                            <b>Entrée gratuite</b> au Muséum national d'Histoire naturelle, la grande galerie de l'évolution et son exposition temporaire, la galerie de paléontologie de d'anatomie comparée et le cabinet d'histoire. </p>
+                            <b>Entrée gratuite</b> au Muséum national d'Histoire naturelle, la grande galerie de l'évolution et son exposition temporaire, la galerie de paléontologie et d'anatomie comparée et le cabinet d'histoire. </p>
                     </div>
                     <div class="box">
                         <p class="title">Entrée à tarif réduit</p>
