--- a/soutien.html
+++ b/soutien.html
@@ -89,10 +89,10 @@
                     <div class="flexslider">
                         <ul class="slides">
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/primitifs.jpg" />
                             </li>
                             <li>
-                              <img src="img/about_slide1.jpg" />
+                              <img src="img/primitifs.jpg" />
                             </li>
                         </ul>
                     </div>
