--- a/dons.html
+++ b/dons.html
@@ -86,7 +86,7 @@ Les dons faits par des entreprises sont éligibles aux dispositions des
 lois sur le mécénat d'entreprise , soit une déduction de 60% dessommes
 versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
 
-      <div id="service_1">
+     <div id="service_1">
         <div class="container">
             <div class="section_header">
             </div>
@@ -94,8 +94,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/musee-ethno2.png">
-                                <img src="img/musee-ethno2.png" width="290" height="390">
+                            <a href="img/Rhino.JPG">
+                                <img src="img/Rhino.JPG" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -107,8 +107,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/griaule.jpg">
-                                <img src="img/griaule.jpg" width="290" height="390">
+                            <a href="img/2013-5-39.jpg">
+                                <img src="img/2013-5-39.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -120,8 +120,8 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/allez2.png">
-                                <img src="img/allez2.jpg" width="290" height="390" topmargin="10px">
+                            <a href="img/2011-14-1.jpg">
+                                <img src="img/2011-14-1.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -133,6 +133,7 @@ versées dans la limite de 5 pour mille de leur chiffre d'affaires .</p>
             </div>
         </div>
     </div>
+
     </br>
     </br>
 
