--- a/aide.html
+++ b/aide.html
@@ -82,7 +82,16 @@
                 <div class="col-sm-6 intro">
                     <h6>L'aide à la recherche est l'une des 3 missions fondamentales de l'association.</h6>
                     <p>
-                    Le Musée de l'Homme est à la fois un Musée qui conserve et présente des collections au public et un établissement d'enseignement et de <b>recherche</b> sur l'évolution humaine. Afin de soutenir cette action, la Société des Amis a créé en 2008 le prix André LEROI-GOURHAN qui distingue et aide financièrement chaque année un étudiant du Musée national d'histoire naturelle dont le travail contribue au contenu scientifique et culturel du Musée de l'Homme.
+                    Le Musée de l'Homme est à la fois un Musée qui conserve et présente des collections au public et un établissement d'enseignement et de <b>recherche</b> sur l'évolution humaine. Afin de soutenir cette action, la Société des Amis a créé en 2008 le prix André LEROI-GOURHAN qui distingue et aide financièrement chaque année un étudiant du Muséeum national d'histoire naturelle dont le travail contribue au contenu scientifique et culturel du Musée de l'Homme.
+
+                    + Stabilo texte
+                    + Prix 2015 (4-5 lignes) (au milieu texte stabilo)
+                    Photo couv du livre "lart des objets de la préhistoire" ?
+
+                    Photo Musée Ethno , enlever
+                    Photo Remise du prix Ermine Xhauflair
+
+
                       </p>
                 </div>
                 <div class="col-sm-6">
