--- a/collections.html
+++ b/collections.html
@@ -82,13 +82,19 @@
     <div id="aboutus">
         <div class="container">
             <div class="section_header">
-                <h3>2. Missions : Enrichissements des collections</h3>
+                <h3>2. Missions : Enrichissement des collections</h3>
             </div>
             <div class="row">
                 <div class="col-sm-6 intro">
                     <h6>L'enrichissement des collections est l'une des 3 missions fondamentales de l'association.</h6>
                     <p>
                     La Société des Amis contribue par ailleurs à <b> l'enrichissement des collections</b> du Musée, en l'aidant à acquérir des objets et en transmettant au musée les dons et legs qu'elle reçoit. Au cours des dernières années, la Société des Amis a notamment remis au Musée, les photographies présentées par Laura Sonnino-Jannelli en 2005 et l'importante donation de Claire et Amédée Maratier. Elle a acquis en 2011 une série de trente-huit objets du Vanuatu.
+
+                    changer chiifres -> Lettres
+
+                    Remplacer texte par stabilo
+                    Photo : masque vanuatu verticale, hotel funéraire + yeux de laura
+
                       </p>
                 </div>
                 <div class="col-sm-6">
