--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,8 @@
                 </div>
             </div>
 
-            <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;ll=64.089157,-21.816616&amp;spn=0.045157,0.15398&amp;t=m&amp;z=13&amp;output=embed"></iframe>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.8340501312186!2d2.2873443000000107!3d48.861374800000036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe3531dc093%3A0x2bc8d19efa457b9f!2s17+Place+du+Trocad%C3%A9ro+et+du+11+Novembre%2C+75116+Paris!5e0!3m2!1sen!2sfr!4v1441715493291" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
 
