--- a/organisation.html
+++ b/organisation.html
@@ -131,7 +131,7 @@
                     <div class="text">
                         <h4>Méditerranée</h4>
                         <p>
-                            (Marseille) Présidée par Alix Martin, Secrétaire général : Anne-Marie SUIDE. Adresse : 48 boulevard Hugues 13012 MARSEILLE Tél. 04 91 342 512 Courriel : samh.med13@orange.fr </p>
+                            (Marseille) Présidée par Alix Martin. Adresse : 48 boulevard Hugues 13012 MARSEILLE Tél. 04 91 342 512 Courriel : samh.med13@orange.fr </p>
                     </div>
                     <div class="text">
                         <h4>Océanique</h4>
