--- a/histoire.html
+++ b/histoire.html
@@ -90,6 +90,9 @@
                       </br>
                       </br>
                         C'est Charles de Noailles qui succède à Paul Doumer en 1928 . Grand mécène, collectionneur d'art contemporain , ami des surréalistes , il assure le financement du film de Jean Cocteau , "le sang d'un poète ", et de celui de Luis Bunuel , " l'âge d'or " et commande à l'architecte Robert Mallet-Stevens la villa de Hyères qui porte son nom . Ami de Georges-Henri Rivière , il donne une forte impulsion à la société des amis , réunit de grands mécènes , collecte des dons , enrichit les collections du Musée et finance la mission Dakar-Djibouti de 1937 . Pendant cette  période de l'entre deux guerres , la société des amis va devenir le soutien économique indispensable d'un musée qui manque de moyens de fonctionnement . Elle  achète du mobilier , des livres , finance des dépenses de personnel ou encore des travaux d'aménagement comme ceux de la bibliothèque du Musée.
+
+                        photos : enlever yeux de Laura, inverser affiche 1 et 3, insérer en 2 Arts Primitifs
+
                       </br>
 <div id="service_1">
         <div class="container">
